--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,12 @@ spring:
   data:
     mongodb:
       uri: mongodb://admin:admin@localhost:27017/offers
+
+offer:
+  http:
+    client:
+      config:
+        connectionTimeout: 1000
+        port: 5057
+        readTimeout: 1000
+        uri: http://ec2-18-194-181-208.eu-central-1.compute.amazonaws.com:5057/offers
