--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,4 +10,13 @@ offer:
         connectionTimeout: 1000
         port: 5057
         readTimeout: 1000
-        uri: http://ec2-18-194-181-208.eu-central-1.compute.amazonaws.com:5057/offers
+        uri: http://ec2-18-194-181-208.eu-central-1.compute.amazonaws.com
+
+http:
+  offers:
+    scheduler:
+      request:
+        delay: PT3H
+
+scheduling:
+  enabled: true
